# PipePulse

./: .env.example  .gitignore  Dockerfile  README.md  app.py  client.py  environment.py  grader.py  inference.py  models.py  openenv.yaml  prevalidate.py  pyproject.toml  requirements.txt  tasks.py
server/: app.py
